Avance en el diseño de la página de inicio y de videos

--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galería</title>
+    <title>Galería - Videos</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
 
     <!-- Central: Título, descripción, barra de búsqueda y accesos rápidos -->
     <section>
-        <h1>Explora una amplia variedad de fotos que inspiran creatividad</h1>
+        <h1>...</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
     </section>
 
