Se implementaron medidas mínimas en pixeles para la cabecera. Avance en los estilos de la sección principal

--- a/index.html
+++ b/index.html
@@ -29,15 +29,30 @@
 
 
     <!-- Central: Título, descripción, barra de búsqueda y accesos rápidos -->
-    <section>
+    <section class="centro">
         <h1>Explora una amplia variedad de fotos que inspiran creatividad</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+    
+        <!-- Barra de búsqueda de recursos -->
+        <div class="barra-busqueda">
+
+            <!-- Filtros -->
+            <div class="filtro">
+                <button><img src="img/ajustes.png"></button>
+                <span>Filtro</span>
+            </div>
+
+            <input type="text" placeholder="Busca en todos los recursos">
+
+            <button><img src="img/busqueda.png"></button>
+        </div>
+    
     </section>
 
 
-    <footer>
+    <!-- <footer>
         <p>Autor: ''</p>
-    </footer>
+    </footer> -->
 
     <script src="script.js"></script>
 </body>
