--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galería - Videos</title>
+    <title>Videos</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -16,8 +16,8 @@
 
         <!-- Botones de búsqueda por tipo de recurso -->
         <nav>
-            <a href="index.html">Fotos</a>
-            <a href="videos.html">Videos</a>
+            <a href="index.html" id="fotos">Fotos</a>
+            <a href="videos.html" id="videos">Videos</a>
         </nav>
 
         <!-- Sección de recursos guardados -->
