Agregada una imagen de fondo para la sección central y ajustes en los colores de los elementos del header y centro

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <!-- Logo -->
         <div>
-            <img src="img/capas.png">
+            <img src="img/capas.svg">
             <a href="https://index.html">WebSite</a>
         </div>
 
@@ -22,7 +22,7 @@
 
         <!-- Sección de recursos guardados -->
         <div>
-            <img src="img/marcador.png" id="img-guardados">
+            <img src="img/marcador.svg" id="img-guardados">
             <a href="https://index.html" id="guardados">Guardados</a>
         </div>
     </header>
@@ -31,7 +31,7 @@
     <!-- Central: Título, descripción, barra de búsqueda y accesos rápidos -->
     <section class="centro">
         <h1>Explora una amplia variedad de fotos que inspiran creatividad</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p>Explora una selección de fotos inspiradoras que despiertan la creatividad y ofrecen nuevas perspectivas. Ideal para encontrar ideas visuales que transformen tus proyectos.</p>
     
         <!-- Barra de búsqueda de recursos -->
         <div class="barra-busqueda">
