--- a/videos.html
+++ b/videos.html
@@ -10,7 +10,7 @@
     <header>
         <!-- Logo -->
         <div>
-            <img src="img/capas.png">
+            <img src="img/capas.svg">
             <a href="https://index.html">WebSite</a>
         </div>
 
@@ -22,22 +22,61 @@
 
         <!-- Sección de recursos guardados -->
         <div>
-            <img src="img/marcador.png" id="img-guardados">
+            <img src="img/marcador.svg" id="img-guardados">
             <a href="https://index.html" id="guardados">Guardados</a>
         </div>
     </header>
 
 
     <!-- Central: Título, descripción, barra de búsqueda y accesos rápidos -->
-    <section>
-        <h1>...</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+    <section class="centro">
+        <h1>Mira, inspira y crea con nuestra selección de videos</h1>
+        <p>Descubre una selección de videos que inspiran creatividad y ofrecen nuevas ideas. Perfecto para quienes buscan contenido que motive y despierte la imaginación.</p>
+    
+        <!-- Barra de búsqueda de recursos -->
+        <div class="barra-busqueda">
+
+            <!-- Filtros -->
+            <div class="filtro">
+                <button><img src="img/ajustes.png"></button>
+                <span>Filtros</span>
+            </div>
+
+            <!-- Barra y botón de búsqueda -->
+            <div class="input-busqueda">
+                <input type="text" placeholder="Busca en todos los recursos">
+                <button><img src="img/busqueda.png"></button>
+            </div>
+        </div>
+
+        <!-- Accesos rápidos -->
+        <div class="accesos-rapidos">
+            <div class="acceso">
+                <img src="img/banco.png">
+                <span>Negocios</span>
+            </div>
+
+            <div class="acceso">
+                <img src="img/gaming.png">
+                <span>Juegos</span>
+            </div>
+
+            <div class="acceso">
+                <img src="img/libros.png">
+                <span>Estudios</span>
+            </div>
+
+            <div class="acceso">
+                <img src="img/natural.png">
+                <span>Paisajes</span>
+            </div>
+        </div>
     </section>
 
 
-    <footer>
+    <!-- <footer>
         <p>Autor: ''</p>
-    </footer>
+    </footer> -->
 
     <script src="script.js"></script>
 </body>
