Se pintan las fotos obtenidas de la API con las frases en sus respectivas posiciones y se hizo un avance en la muestra de recursos en la sección "Videos"

--- a/videos.html
+++ b/videos.html
@@ -31,7 +31,6 @@
     <!-- Central: Título, descripción, barra de búsqueda y accesos rápidos -->
     <section class="centro">
         <h1>Mira, inspira y crea con nuestra selección de videos</h1>
-        <p>Descubre una selección de videos que inspiran creatividad y ofrecen nuevas ideas. Perfecto para quienes buscan contenido que motive y despierte la imaginación.</p>
     
         <!-- Barra de búsqueda de recursos -->
         <div class="barra-busqueda">
@@ -73,11 +72,24 @@
         </div>
     </section>
 
+    <!-- Galería de videos -->
+    <section class="content-galeria">
+        <div class="cabecera-galeria">
+            <h1 class="titulo-galeria">Galería de videos</h1>
+            <p class="text-galeria">Descubre una selección de videos que inspiran creatividad y ofrecen nuevas ideas. Perfecto para quienes buscan contenido que motive y despierte la imaginación.</p>
+        </div>
 
-    <!-- <footer>
-        <p>Autor: ''</p>
-    </footer> -->
+        <div class="galeria">
+            <!-- <div class="frases"><p></p></div>
+            <div><img src=""></div> -->
+        </div>
+    </section>
 
-    <script src="script.js"></script>
+    <footer>
+        <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+    </footer>
+
+    <script src="script.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
 </body>
 </html>
