Los videos ocupan el 100% del contenedor y se agragron los botones para descargar y guardar una foto, pero aún sin funcionalidad

--- a/index.html
+++ b/index.html
@@ -81,8 +81,14 @@
         </div>
 
         <div class="galeria">
-            <!-- <div class="frases"><p></p></div>
-            <div><img src=""></div> -->
+            <!-- <div class="frases"><p></p></div> -->
+            <!-- <div>
+                <img src="img/foto1.jpg" class="foto">
+                <div class="accion">
+                    <button class="descargar"><img src="img/descargar.svg"></button>
+                    <button class="guardar"><img src="img/guardar.svg"></button>
+                </div>
+            </div> -->
         </div>
     </section>
 
