Se agregó una nota para recomendar búsquedas con palabras en inglés en ambas secciones de fotos y videos

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             </div>
         </div>
 
+        <div class="notas"><p>Utiliza palabras en inglés para mayor precisión en la búsqueda</p></div>
+
         <!-- Accesos rápidos -->
         <div class="accesos-rapidos">
             <div class="acceso">
