--- a/videos.html
+++ b/videos.html
@@ -48,6 +48,8 @@
             </div>
         </div>
 
+        <div class="notas"><p>Utiliza palabras en inglés para mayor precisión en la búsqueda</p></div>
+
         <!-- Accesos rápidos -->
         <div class="accesos-rapidos">
             <div class="acceso">
