Implementada barra de búsqueda para ambas secciones. Se muestran mensajes para las búsquedas inválidas y para las "no coinciendias" con ningún recurso.

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
 
             <!-- Barra y botón de búsqueda -->
             <div class="input-busqueda">
-                <input type="text" placeholder="Busca en todos los recursos">
-                <button><img src="img/busqueda.png"></button>
+                <input type="text" class="texto" placeholder="Busca en todos los recursos">
+                <button class="buscar"><img src="img/busqueda.png"></button>
             </div>
         </div>
 
+        <!-- Notas o recomendaciones -->
         <div class="notas"><p>Utiliza palabras en inglés para mayor precisión en la búsqueda</p></div>
 
         <!-- Accesos rápidos -->
@@ -85,7 +86,7 @@
         <div class="galeria">
             <!-- <div class="frases"><p></p></div> -->
             <!-- <div>
-                <img src="img/foto1.jpg" class="foto">
+                <img src="..." class="foto">
                 <div class="accion">
                     <button class="descargar"><img src="img/descargar.svg"></button>
                     <button class="guardar"><img src="img/guardar.svg"></button>
