--- a/videos.html
+++ b/videos.html
@@ -43,11 +43,12 @@
 
             <!-- Barra y botón de búsqueda -->
             <div class="input-busqueda">
-                <input type="text" placeholder="Busca en todos los recursos">
-                <button><img src="img/busqueda.png"></button>
+                <input type="text" class="texto" placeholder="Busca en todos los recursos">
+                <button class="buscar"><img src="img/busqueda.png"></button>
             </div>
         </div>
 
+        <!-- Notas o recomendaciones -->
         <div class="notas"><p>Utiliza palabras en inglés para mayor precisión en la búsqueda</p></div>
 
         <!-- Accesos rápidos -->
@@ -77,13 +78,19 @@
     <!-- Galería de videos -->
     <section class="content-galeria">
         <div class="cabecera-galeria">
-            <h1 class="titulo-galeria">Galería de videos</h1>
-            <p class="text-galeria">Descubre una selección de videos que inspiran creatividad y ofrecen nuevas ideas. Perfecto para quienes buscan contenido que motive y despierte la imaginación.</p>
+            <div class="titulo-galeria"><h1>Galería de videos</h1></div>
+            <div class="text-galeria"><p>Descubre una selección de videos que inspiran creatividad y ofrecen nuevas ideas. Perfecto para quienes buscan contenido que motive y despierte la imaginación.</p></div>
         </div>
 
         <div class="galeria">
-            <!-- <div class="frases"><p></p></div>
-            <div><img src=""></div> -->
+            <!-- <div class="frases"><p></p></div> -->
+            <!-- <div>
+                <video src="..." class="video">
+                <div class="accion">
+                    <button class="descargar"><img src="img/descargar.svg"></button>
+                    <button class="guardar"><img src="img/guardar.svg"></button>
+                </div>
+            </div> -->
         </div>
     </section>
 
