Si no se encuentran coincidencias, se mantienen los recursos de la búsqueda anterior y se corregió el problema de no poder hacer la búsqueda con la tecla "Enter".

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 
             <!-- Barra y botón de búsqueda -->
             <div class="input-busqueda">
-                <input type="text" class="texto" placeholder="Busca en todos los recursos">
-                <button class="buscar"><img src="img/busqueda.png"></button>
+                <form class="form-busqueda"> 
+                    <input type="text" class="texto" placeholder="Busca en todos los recursos">
+                    <button class="buscar"><img src="img/busqueda.png"></button>
+                </form>
             </div>
         </div>
 
