Se implementaron los accesos rápidos para ambas páginas y se reorganizaron los eventos principales en una sola función llamada gestorEventos.

--- a/videos.html
+++ b/videos.html
@@ -56,23 +56,23 @@
         <!-- Accesos rápidos -->
         <div class="accesos-rapidos">
             <div class="acceso">
-                <img src="img/banco.png">
-                <span>Negocios</span>
+                <img src="img/banco.png" class="commerce">
+                <span class="commerce">Negocios</span>
             </div>
 
             <div class="acceso">
-                <img src="img/gaming.png">
-                <span>Juegos</span>
+                <img src="img/gaming.png" class="gaming">
+                <span class="gaming">Juegos</span>
             </div>
 
             <div class="acceso">
-                <img src="img/libros.png">
-                <span>Estudios</span>
+                <img src="img/libros.png" class="studies">
+                <span class="studies">Estudios</span>
             </div>
 
             <div class="acceso">
-                <img src="img/natural.png">
-                <span>Paisajes</span>
+                <img src="img/natural.png" class="landscapes">
+                <span class="landscapes">Paisajes</span>
             </div>
         </div>
     </section>
