Se implementó la opción de guardar un recurso (foto o video) y se creó una página para mostrarlos, donde se cuenta con la opción de borrarlos de la lista de guardados.

--- a/videos.html
+++ b/videos.html
@@ -11,7 +11,7 @@
         <!-- Logo -->
         <div>
             <img src="img/capas.svg">
-            <a href="https://index.html">WebSite</a>
+            <a href="videos.html">WebSite</a>
         </div>
 
         <!-- Botones de búsqueda por tipo de recurso -->
@@ -23,7 +23,7 @@
         <!-- Sección de recursos guardados -->
         <div>
             <img src="img/marcador.svg" id="img-guardados">
-            <a href="https://index.html" id="guardados">Guardados</a>
+            <a href="guardados.html" id="guardados">Guardados</a>
         </div>
     </header>
 
